// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Command > #addArgument > should throw if argument is added after variadic argument 1`] = `
{
  "code": 1,
  "id": "kronk/argument-after-variadic",
  "message": "Cannot have argument after variadic argument ([num...])",
  "additional": [],
  "cause": {
    "argument": "<...>",
    "last": "[num...]",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` alias conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'tz' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` name conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'timezone' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Invalid subcommand name",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on long flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '--max' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on short flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '-M' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #usage > should return command usage (0) 1`] = `
{
  "arguments": undefined,
  "options": "[options]",
  "subcommand": "[command]",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (1) 1`] = `
{
  "arguments": "<x> <y> <z>",
  "options": "[options]",
  "subcommand": "[command]",
}
`;
